# Sales_Hub

./: .env.example  .gitignore  Dockerfile  README.md  conftest.py  docker-compose.yml  pyproject.toml  requirements.txt
app/: metrics.py  settings.py  urls.py  views.py
app/templates/: base.html  home.html  no_company.html
app/tests/: test_dashboard.py  test_smoke.py
brands/: forms.py  models.py  serializers.py  urls.py  views.py
brands/migrations/: 0001_initial.py
brands/templates/: brand_create.html  brand_delete.html  brand_detail.html  brand_list.html  brand_update.html
brands/tests/: test_api.py  test_models.py  test_views.py
budgets/: urls.py  views.py
budgets/templates/: budget_convert.html  budget_create.html  budget_delete.html  budget_detail.html  budget_list.html  budget_pdf.html  budget_update.html
budgets/tests/: test_views.py
categories/: forms.py  models.py  serializers.py  views.py
clients/: admin.py  forms.py  models.py  serializers.py  urls.py  views.py
companies/: admin.py  middleware.py  mixins.py  models.py
inflows/: admin.py  forms.py  models.py  serializers.py  urls.py  views.py
outflows/: admin.py  forms.py  models.py  serializers.py  views.py
products/: admin.py  apps.py  forms.py  models.py  serializers.py  signals.py  urls.py  views.py
sale_order/: urls.py  views.py
sales/: admin.py  forms.py  models.py  serializers.py  signals.py  urls.py  views.py
sales/utils/: pdf.py
stockmoviment/: admin.py  apps.py  models.py  serializers.py  signals.py  urls.py  views.py
suppliers/: models.py  serializers.py  views.py
(+124 files in other folders)
